Skill component is added and navbar and related css files is added

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -15,21 +15,22 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Ana Sayfa</a>
+          <a class="nav-link" routerLink="/projects">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/projects">Tasarımlarım</a>
+          <a class="nav-link" routerLink="/projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/courses">Kurslarım</a>
+          <a class="nav-link" routerLink="/courses">Courses/Certificates</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" routerLink="/cv">CV</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/references">Referanslarım</a>
+          <a class="nav-link" routerLink="/references">References</a>
         </li>
       </ul>
     </div>
