--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,11 +1,331 @@
-<div class="container">
-  <h1>Kurslarım</h1>
-  <iframe
-    id="cvframe"
-    class="cvframe"
-    src="assets/certificate.pdf"
-    width="100%"
-    height="1000px"
-  >
-  </iframe>
+<div id="mainCoantiner">
+  <!--dust particel-->
+  <div class="margin-body">
+    <div>
+      <div class="starsec"></div>
+      <div class="starthird"></div>
+      <div class="starfourth"></div>
+      <div class="starfifth"></div>
+    </div>
+    <!--Dust particle end--->
+
+    <div class="row">
+      <div class="col-sm-12 col-md-12">
+        <div class="wpb_text_column wpb_content_element">
+          <div class="wpb_wrapper">
+            <div class="title-h1 text-center">
+              <span><span class="light">My </span> Courses</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">Udemy</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              Python for Data Science and Machine Learning Bootcamp
+            </div>
+          </div>
+          <figure class="pricing-row">Machine Learning Algorithms</figure>
+          <figure class="pricing-row">
+            <span>Data Analysis</span>
+          </figure>
+          <figure class="pricing-row">
+            SciKit-Learn for Machine Learning Tasks
+          </figure>
+          <figure class="pricing-row">Neural Networks</figure>
+          <figure class="pricing-row">
+            Interactive Dynamic Visualizations
+          </figure>
+          <figure class="pricing-row">Natural Language Processing</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a href="#" class="gem-button gem-green">See Credentails</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">VBO</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              Python A-Z™: Data Science and Machine Learning
+            </div>
+          </div>
+          <figure class="pricing-row">Python Programming</figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Statistics for Data Science</span>
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Data Manipulation and Cleaning</span>
+          </figure>
+          <figure class="pricing-row">Machine Learning</figure>
+          <figure class="pricing-row">Big Data Analysis</figure>
+          <figure class="pricing-row">Databases and SQL</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a class="gem-button gem-purpel">See Credentails</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">Udemy</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              100 Days of Code: The Complete Python Pro Bootcamp for 2022
+            </div>
+          </div>
+          <figure class="pricing-row">Desktop Applications with Python</figure>
+          <figure class="pricing-row">
+            <span>Web Development</span>
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Python for Data Science</span>
+          </figure>
+          <figure class="pricing-row">Build Games with Python</figure>
+          <figure class="pricing-row">Web Apps with Python</figure>
+          <figure class="pricing-row">Testing with Selenium</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a class="gem-button gem-orange">See Credentails</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div style="" class="pricing-cost">Coursera</div>
+                <div class="time" style="display: inline-block">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">Machine Learning Specialization</div>
+          </div>
+          <figure class="pricing-row">
+            Build ML Models with NumPy & Scikit-learn
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Recommender Systems</span>
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Supervised Learning</span>
+          </figure>
+          <figure class="pricing-row">
+            Unsupervised Learning and Clustering
+          </figure>
+          <figure class="pricing-row">Artificial Neural Network</figure>
+          <figure class="pricing-row">Tensorflow</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a class="gem-button gem-yellow">See Credentails</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">MIT</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              Probability - The Science of Uncertainty and Data
+            </div>
+          </div>
+          <figure class="pricing-row">
+            Structure and Elements of Probabilistic Models
+          </figure>
+          <figure class="pricing-row">
+            <span>Probability Models and Axioms</span>
+          </figure>
+          <figure class="pricing-row">Bayesian Inference</figure>
+          <figure class="pricing-row">
+            Limit Theorems and Classical Statistics
+          </figure>
+          <figure class="pricing-row">Markov Chains</figure>
+          <figure class="pricing-row">Bernoulli and Poisson Processes</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a
+                href="https://courses.edx.org/certificates/23812824c294496a93efea18657b74cd"
+                class="gem-button gem-purpel"
+                class="gem-button gem-green"
+                >See Credentails</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">Udemy</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              Complete Python Bootcamp From Zero to Hero in Python
+            </div>
+          </div>
+          <figure class="pricing-row">Python Programming</figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Object Oriented Programming</span>
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f"
+              >Python Objects and Data Structures</span
+            >
+          </figure>
+          <figure class="pricing-row">Web Scrapping with Python</figure>
+          <figure class="pricing-row">Errors and Exception Handling</figure>
+          <figure class="pricing-row">
+            Python Functions, Methods, Decorators and Generators
+          </figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a
+                class="gem-button gem-purpel"
+                href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-1e4669fe-b67a-43c7-bcba-0acb32bcdf64.pdf"
+                >See Credentails</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div class="pricing-cost">Coursera</div>
+                <div class="time">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">
+              Machine Learning Engineering for Production (MLOps) Specialization
+            </div>
+          </div>
+          <figure class="pricing-row">
+            Design Machine Learning Production System End-to-End
+          </figure>
+          <figure class="pricing-row">
+            <span
+              >Machine Learning Project Scoping, Data needs, Modeling
+              Strategies</span
+            >
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f"
+              >Machine Learning Model Deployment
+            </span>
+          </figure>
+          <figure class="pricing-row">
+            Build Data Pipelines by Gathering, Cleaning, and Validating Datasets
+          </figure>
+          <figure class="pricing-row">
+            Continuously Improve Productionized Machine Learning Application
+          </figure>
+          <figure class="pricing-row">
+            Maintain and Monitor Continuously Operating Production System
+          </figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a
+                href="https://www.deeplearning.ai/courses/machine-learning-engineering-for-production-mlops/"
+                class="gem-button gem-orange"
+                >See Credentails</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 pricing-column-wrapper">
+        <div class="pricing-column">
+          <div class="pricing-price-row">
+            <div class="pricing-price-wrapper">
+              <div class="pricing-price">
+                <div style="" class="pricing-cost">Coursera</div>
+                <div class="time" style="display: inline-block">Course</div>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-row-title">
+            <div class="pricing_row_title">Machine Learning Specialization</div>
+          </div>
+          <figure class="pricing-row">
+            Build Machine Learning Models in Python Using NumPy and Scikit-learn
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f"
+              >Build and Train Supervised Machine Learning Models for
+              Prediction</span
+            >
+          </figure>
+          <figure class="pricing-row">
+            <span style="color: #5f727f">Recommender Systems</span>
+          </figure>
+          <figure class="pricing-row">
+            Machine Learning Model Development
+          </figure>
+          <figure class="pricing-row">Anomaly Detection</figure>
+          <figure class="pricing-row">Tensorflow</figure>
+          <div class="pricing-footer">
+            <div class="gem-button-container gem-button-position-center">
+              <a
+                href="https://www.deeplearning.ai/courses/machine-learning-specialization/"
+                class="gem-button gem-yellow"
+                >See Credentails</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
