--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -1,352 +1,11 @@
 #mainCoantiner {
   background-image: url("https://1.bp.blogspot.com/-Fo3iRt97ZXY/XvSG4EMwi0I/AAAAAAAAVEo/mrApRTcVVRk1m-fX9K-ffNwRUXlHUocdwCLcBGAsYHQ/s1600/h.jpg");
-  margin: 0px;
-  border: 0px;
+
   background-color: #181828;
   height: 100%;
   width: 100%;
   padding-bottom: 50px;
-  justify-content: center;
-  align-items: center;
 }
-.mystyleSec {
-  background-image: url(http://thepatternlibrary.com/img/h.jpg);
-}
-.myline {
-  border-style: none;
-  border-top-style: dotted;
-  width: 5%;
-  border-color: #fff;
-  border-width: 12px;
-  margin: 100px auto;
-}
-
-.mystylethird {
-  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/binding_dark.png");
-}
-
-/***end*****/
-
-.card {
-  border: none;
-  border-radius: 30px;
-  background-color: #14edaa;
-}
-
-.wow-bg {
-  background-color: #141421;
-  border: 1px solid #2e2e4c;
-  box-shadow: 3px 9px 16px rgb(0, 0, 0, 0.4),
-    -3px -3px 10px rgba(255, 255, 255, 0.06),
-    inset 14px 14px 26px rgb(0, 0, 0, 0.3),
-    inset -3px -3px 15px rgba(255, 255, 255, 0.05);
-  border-radius: 10px;
-  margin-top: 4px;
-}
-
-.starsec {
-  content: " ";
-  position: absolute;
-  width: 3px;
-  height: 3px;
-  background: transparent;
-  box-shadow: 571px 173px #00bcd4, 1732px 143px #00bcd4, 1745px 454px #ff5722,
-    234px 784px #00bcd4, 1793px 1123px #ff9800, 1076px 504px #03a9f4,
-    633px 601px #ff5722, 350px 630px #ffeb3b, 1164px 782px #00bcd4,
-    76px 690px #3f51b5, 1825px 701px #cddc39, 1646px 578px #ffeb3b,
-    544px 293px #2196f3, 445px 1061px #673ab7, 928px 47px #00bcd4,
-    168px 1410px #8bc34a, 777px 782px #9c27b0, 1235px 1941px #9c27b0,
-    104px 1690px #8bc34a, 1167px 1338px #e91e63, 345px 1652px #009688,
-    1682px 1196px #f44336, 1995px 494px #8bc34a, 428px 798px #ff5722,
-    340px 1623px #f44336, 605px 349px #9c27b0, 1339px 1344px #673ab7,
-    1102px 1745px #3f51b5, 1592px 1676px #2196f3, 419px 1024px #ff9800,
-    630px 1033px #4caf50, 1995px 1644px #00bcd4, 1092px 712px #9c27b0,
-    1355px 606px #f44336, 622px 1881px #cddc39, 1481px 621px #9e9e9e,
-    19px 1348px #8bc34a, 864px 1780px #e91e63, 442px 1136px #2196f3,
-    67px 712px #ff5722, 89px 1406px #f44336, 275px 321px #009688,
-    592px 630px #e91e63, 1012px 1690px #9c27b0, 1749px 23px #673ab7,
-    94px 1542px #ffeb3b, 1201px 1657px #3f51b5, 1505px 692px #2196f3,
-    1799px 601px #03a9f4, 656px 811px #00bcd4, 701px 597px #00bcd4,
-    1202px 46px #ff5722, 890px 569px #ff5722, 1613px 813px #2196f3,
-    223px 252px #ff9800, 983px 1093px #f44336, 726px 1029px #ffc107,
-    1764px 778px #cddc39, 622px 1643px #f44336, 174px 1559px #673ab7,
-    212px 517px #00bcd4, 340px 505px #fff, 1700px 39px #fff,
-    1768px 516px #f44336, 849px 391px #ff9800, 228px 1824px #fff,
-    1119px 1680px #ffc107, 812px 1480px #3f51b5, 1438px 1585px #cddc39,
-    137px 1397px #fff, 1080px 456px #673ab7, 1208px 1437px #03a9f4,
-    857px 281px #f44336, 1254px 1306px #cddc39, 987px 990px #4caf50,
-    1655px 911px #00bcd4, 1102px 1216px #ff5722, 1807px 1044px #fff,
-    660px 435px #03a9f4, 299px 678px #4caf50, 1193px 115px #ff9800,
-    918px 290px #cddc39, 1447px 1422px #ffeb3b, 91px 1273px #9c27b0,
-    108px 223px #ffeb3b, 146px 754px #00bcd4, 461px 1446px #ff5722,
-    1004px 391px #673ab7, 1529px 516px #f44336, 1206px 845px #cddc39,
-    347px 583px #009688, 1102px 1332px #f44336, 709px 1756px #00bcd4,
-    1972px 248px #fff, 1669px 1344px #ff5722, 1132px 406px #f44336,
-    320px 1076px #cddc39, 126px 943px #ffeb3b, 263px 604px #ff5722,
-    1546px 692px #f44336;
-  animation: animStar 150s linear infinite;
-}
-
-.starthird {
-  content: " ";
-  position: absolute;
-  width: 3px;
-  height: 3px;
-  background: transparent;
-  box-shadow: 571px 173px #00bcd4, 1732px 143px #00bcd4, 1745px 454px #ff5722,
-    234px 784px #00bcd4, 1793px 1123px #ff9800, 1076px 504px #03a9f4,
-    633px 601px #ff5722, 350px 630px #ffeb3b, 1164px 782px #00bcd4,
-    76px 690px #3f51b5, 1825px 701px #cddc39, 1646px 578px #ffeb3b,
-    544px 293px #2196f3, 445px 1061px #673ab7, 928px 47px #00bcd4,
-    168px 1410px #8bc34a, 777px 782px #9c27b0, 1235px 1941px #9c27b0,
-    104px 1690px #8bc34a, 1167px 1338px #e91e63, 345px 1652px #009688,
-    1682px 1196px #f44336, 1995px 494px #8bc34a, 428px 798px #ff5722,
-    340px 1623px #f44336, 605px 349px #9c27b0, 1339px 1344px #673ab7,
-    1102px 1745px #3f51b5, 1592px 1676px #2196f3, 419px 1024px #ff9800,
-    630px 1033px #4caf50, 1995px 1644px #00bcd4, 1092px 712px #9c27b0,
-    1355px 606px #f44336, 622px 1881px #cddc39, 1481px 621px #9e9e9e,
-    19px 1348px #8bc34a, 864px 1780px #e91e63, 442px 1136px #2196f3,
-    67px 712px #ff5722, 89px 1406px #f44336, 275px 321px #009688,
-    592px 630px #e91e63, 1012px 1690px #9c27b0, 1749px 23px #673ab7,
-    94px 1542px #ffeb3b, 1201px 1657px #3f51b5, 1505px 692px #2196f3,
-    1799px 601px #03a9f4, 656px 811px #00bcd4, 701px 597px #00bcd4,
-    1202px 46px #ff5722, 890px 569px #ff5722, 1613px 813px #2196f3,
-    223px 252px #ff9800, 983px 1093px #f44336, 726px 1029px #ffc107,
-    1764px 778px #cddc39, 622px 1643px #f44336, 174px 1559px #673ab7,
-    212px 517px #00bcd4, 340px 505px #fff, 1700px 39px #fff,
-    1768px 516px #f44336, 849px 391px #ff9800, 228px 1824px #fff,
-    1119px 1680px #ffc107, 812px 1480px #3f51b5, 1438px 1585px #cddc39,
-    137px 1397px #fff, 1080px 456px #673ab7, 1208px 1437px #03a9f4,
-    857px 281px #f44336, 1254px 1306px #cddc39, 987px 990px #4caf50,
-    1655px 911px #00bcd4, 1102px 1216px #ff5722, 1807px 1044px #fff,
-    660px 435px #03a9f4, 299px 678px #4caf50, 1193px 115px #ff9800,
-    918px 290px #cddc39, 1447px 1422px #ffeb3b, 91px 1273px #9c27b0,
-    108px 223px #ffeb3b, 146px 754px #00bcd4, 461px 1446px #ff5722,
-    1004px 391px #673ab7, 1529px 516px #f44336, 1206px 845px #cddc39,
-    347px 583px #009688, 1102px 1332px #f44336, 709px 1756px #00bcd4,
-    1972px 248px #fff, 1669px 1344px #ff5722, 1132px 406px #f44336,
-    320px 1076px #cddc39, 126px 943px #ffeb3b, 263px 604px #ff5722,
-    1546px 692px #f44336;
-  animation: animStar 10s linear infinite;
-}
-
-.starfourth {
-  content: " ";
-  position: absolute;
-  width: 2px;
-  height: 2px;
-  background: transparent;
-  box-shadow: 571px 173px #00bcd4, 1732px 143px #00bcd4, 1745px 454px #ff5722,
-    234px 784px #00bcd4, 1793px 1123px #ff9800, 1076px 504px #03a9f4,
-    633px 601px #ff5722, 350px 630px #ffeb3b, 1164px 782px #00bcd4,
-    76px 690px #3f51b5, 1825px 701px #cddc39, 1646px 578px #ffeb3b,
-    544px 293px #2196f3, 445px 1061px #673ab7, 928px 47px #00bcd4,
-    168px 1410px #8bc34a, 777px 782px #9c27b0, 1235px 1941px #9c27b0,
-    104px 1690px #8bc34a, 1167px 1338px #e91e63, 345px 1652px #009688,
-    1682px 1196px #f44336, 1995px 494px #8bc34a, 428px 798px #ff5722,
-    340px 1623px #f44336, 605px 349px #9c27b0, 1339px 1344px #673ab7,
-    1102px 1745px #3f51b5, 1592px 1676px #2196f3, 419px 1024px #ff9800,
-    630px 1033px #4caf50, 1995px 1644px #00bcd4, 1092px 712px #9c27b0,
-    1355px 606px #f44336, 622px 1881px #cddc39, 1481px 621px #9e9e9e,
-    19px 1348px #8bc34a, 864px 1780px #e91e63, 442px 1136px #2196f3,
-    67px 712px #ff5722, 89px 1406px #f44336, 275px 321px #009688,
-    592px 630px #e91e63, 1012px 1690px #9c27b0, 1749px 23px #673ab7,
-    94px 1542px #ffeb3b, 1201px 1657px #3f51b5, 1505px 692px #2196f3,
-    1799px 601px #03a9f4, 656px 811px #00bcd4, 701px 597px #00bcd4,
-    1202px 46px #ff5722, 890px 569px #ff5722, 1613px 813px #2196f3,
-    223px 252px #ff9800, 983px 1093px #f44336, 726px 1029px #ffc107,
-    1764px 778px #cddc39, 622px 1643px #f44336, 174px 1559px #673ab7,
-    212px 517px #00bcd4, 340px 505px #fff, 1700px 39px #fff,
-    1768px 516px #f44336, 849px 391px #ff9800, 228px 1824px #fff,
-    1119px 1680px #ffc107, 812px 1480px #3f51b5, 1438px 1585px #cddc39,
-    137px 1397px #fff, 1080px 456px #673ab7, 1208px 1437px #03a9f4,
-    857px 281px #f44336, 1254px 1306px #cddc39, 987px 990px #4caf50,
-    1655px 911px #00bcd4, 1102px 1216px #ff5722, 1807px 1044px #fff,
-    660px 435px #03a9f4, 299px 678px #4caf50, 1193px 115px #ff9800,
-    918px 290px #cddc39, 1447px 1422px #ffeb3b, 91px 1273px #9c27b0,
-    108px 223px #ffeb3b, 146px 754px #00bcd4, 461px 1446px #ff5722,
-    1004px 391px #673ab7, 1529px 516px #f44336, 1206px 845px #cddc39,
-    347px 583px #009688, 1102px 1332px #f44336, 709px 1756px #00bcd4,
-    1972px 248px #fff, 1669px 1344px #ff5722, 1132px 406px #f44336,
-    320px 1076px #cddc39, 126px 943px #ffeb3b, 263px 604px #ff5722,
-    1546px 692px #f44336;
-  animation: animStar 50s linear infinite;
-}
-
-.starfifth {
-  content: " ";
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  background: transparent;
-  box-shadow: 571px 173px #00bcd4, 1732px 143px #00bcd4, 1745px 454px #ff5722,
-    234px 784px #00bcd4, 1793px 1123px #ff9800, 1076px 504px #03a9f4,
-    633px 601px #ff5722, 350px 630px #ffeb3b, 1164px 782px #00bcd4,
-    76px 690px #3f51b5, 1825px 701px #cddc39, 1646px 578px #ffeb3b,
-    544px 293px #2196f3, 445px 1061px #673ab7, 928px 47px #00bcd4,
-    168px 1410px #8bc34a, 777px 782px #9c27b0, 1235px 1941px #9c27b0,
-    104px 1690px #8bc34a, 1167px 1338px #e91e63, 345px 1652px #009688,
-    1682px 1196px #f44336, 1995px 494px #8bc34a, 428px 798px #ff5722,
-    340px 1623px #f44336, 605px 349px #9c27b0, 1339px 1344px #673ab7,
-    1102px 1745px #3f51b5, 1592px 1676px #2196f3, 419px 1024px #ff9800,
-    630px 1033px #4caf50, 1995px 1644px #00bcd4, 1092px 712px #9c27b0,
-    1355px 606px #f44336, 622px 1881px #cddc39, 1481px 621px #9e9e9e,
-    19px 1348px #8bc34a, 864px 1780px #e91e63, 442px 1136px #2196f3,
-    67px 712px #ff5722, 89px 1406px #f44336, 275px 321px #009688,
-    592px 630px #e91e63, 1012px 1690px #9c27b0, 1749px 23px #673ab7,
-    94px 1542px #ffeb3b, 1201px 1657px #3f51b5, 1505px 692px #2196f3,
-    1799px 601px #03a9f4, 656px 811px #00bcd4, 701px 597px #00bcd4,
-    1202px 46px #ff5722, 890px 569px #ff5722, 1613px 813px #2196f3,
-    223px 252px #ff9800, 983px 1093px #f44336, 726px 1029px #ffc107,
-    1764px 778px #cddc39, 622px 1643px #f44336, 174px 1559px #673ab7,
-    212px 517px #00bcd4, 340px 505px #fff, 1700px 39px #fff,
-    1768px 516px #f44336, 849px 391px #ff9800, 228px 1824px #fff,
-    1119px 1680px #ffc107, 812px 1480px #3f51b5, 1438px 1585px #cddc39,
-    137px 1397px #fff, 1080px 456px #673ab7, 1208px 1437px #03a9f4,
-    857px 281px #f44336, 1254px 1306px #cddc39, 987px 990px #4caf50,
-    1655px 911px #00bcd4, 1102px 1216px #ff5722, 1807px 1044px #fff,
-    660px 435px #03a9f4, 299px 678px #4caf50, 1193px 115px #ff9800,
-    918px 290px #cddc39, 1447px 1422px #ffeb3b, 91px 1273px #9c27b0,
-    108px 223px #ffeb3b, 146px 754px #00bcd4, 461px 1446px #ff5722,
-    1004px 391px #673ab7, 1529px 516px #f44336, 1206px 845px #cddc39,
-    347px 583px #009688, 1102px 1332px #f44336, 709px 1756px #00bcd4,
-    1972px 248px #fff, 1669px 1344px #ff5722, 1132px 406px #f44336,
-    320px 1076px #cddc39, 126px 943px #ffeb3b, 263px 604px #ff5722,
-    1546px 692px #f44336;
-  animation: animStar 80s linear infinite;
-}
-
-@keyframes animStar {
-  0% {
-    transform: translateY(0px);
-  }
-  100% {
-    transform: translateY(-2000px);
-  }
-}
-
-.logn-btn {
-  background: #1c1f2f;
-  border-radius: 30px;
-  overflow: hidden;
-  border: 1px solid #2e344d;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  -ms-transition: all 0.3s ease-in-out 0s;
-  -o-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-  /* box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03), inset 14px 14px 70px rgb(0,0,0,0.2), inset -15px -15px 30px rgba(255,255,255, 0.04); */
-  box-shadow: 0px 2px 26px rgb(0, 0, 0, 0.5),
-    0px 7px 13px rgba(255, 255, 255, 0.03);
-  margin-top: 30px;
-}
-
-.logn-btn:hover {
-  background-color: #1c1f2f;
-  border-radius: 50px;
-  min-width: 140px;
-  /* box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03), inset 14px 14px 70px rgb(0,0,0,0.2), inset -15px -15px 30px rgba(255,255,255, 0.04); */
-  box-shadow: 3px 9px 16px rgb(0, 0, 0, 0.4),
-    -3px -3px 10px rgba(255, 255, 255, 0.06),
-    inset 14px 14px 26px rgb(0, 0, 0, 0.3),
-    inset -3px -3px 15px rgba(255, 255, 255, 0.05);
-  border-width: 1px 0px 0px 1px;
-  border-style: solid;
-  border-color: #2e344d;
-}
-
-.textbox-dg {
-  background: rgba(28, 31, 47, 0.16);
-  border-radius: 4px;
-  overflow: hidden;
-  border: 1px solid #2e344d;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s;
-  -ms-transition: all 0.3s ease-in-out 0s;
-  -o-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-  /* box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03), inset 14px 14px 70px rgb(0,0,0,0.2), inset -15px -15px 30px rgba(255,255,255, 0.04); */
-  box-shadow: 10px 10px 36px rgb(0, 0, 0, 0.5),
-    -13px -13px 23px rgba(255, 255, 255, 0.03);
-  border-width: 1px 0px 0 1px;
-  margin-top: 15px;
-}
-
-.form-control:focus {
-  border: 1px solid #344d2e;
-  color: #495057;
-  outline: 0;
-  background: rgb(17, 20, 31);
-  border-radius: 4px;
-  transition: all 0.3s ease-in-out 0s;
-  /* box-shadow: 10px 10px 36px rgb(0,0,0,0.5), -13px -13px 23px rgba(255,255,255, 0.03), inset 14px 14px 70px rgb(0,0,0,0.2), inset -15px -15px 30px rgba(255,255,255, 0.04); */
-  box-shadow: 10px 10px 36px rgb(0, 0, 0, 0.5),
-    -13px -13px 23px rgba(255, 255, 255, 0.03);
-}
-
-.btn-link {
-  color: #344d2e;
-}
-
-.btn-link:hover {
-  color: #2b7a19;
-  text-decoration: underline;
-}
-
-.btn-primary:not(:disabled):not(.disabled).active,
-.btn-primary:not(:disabled):not(.disabled):active,
-.show > .btn-primary.dropdown-toggle {
-  color: #807f7f;
-  background-color: transparent;
-  border-color: #2b7a19;
-}
-
-.btn-primary.focus,
-.btn-primary:focus {
-  color: #fff;
-  background-color: transparent;
-  border-color: transparent;
-  box-shadow: 0 0 0 0.2rem rgba(0, 255, 110, 0.25);
-}
-
-.mt-6,
-.my-6 {
-  margin-top: 2rem !important;
-}
-
-.socila-btn {
-  height: 40px;
-  border-radius: 10%;
-  width: 40px;
-  box-shadow: 3px 9px 16px rgb(0, 0, 0, 0.4),
-    -3px -3px 10px rgba(255, 255, 255, 0.06),
-    inset 14px 14px 26px rgb(0, 0, 0, 0.3),
-    inset -3px -3px 15px rgba(255, 255, 255, 0.05);
-  border-width: 1px 0px 0px 1px;
-  border-style: solid;
-  border-color: rgba(255, 255, 255, 0.2);
-  margin-right: 10px;
-}
-
-.fb-color {
-  color: #3b5998;
-}
-
-.incolor {
-  color: #007bff;
-}
-
-.tweetcolor {
-  color: #41a4f7;
-}
-.driblecolor {
-  color: #e83e8c;
-}
-
-.colorboard {
-  color: #00ffaaed;
-}
-
 /***********pricing table**********/
 .title-h1 {
   margin-top: 0.5em;
@@ -361,7 +20,8 @@
 .title-h1 .light {
   font-weight: normal;
 }
-
+.division-line {
+}
 .pricing-price-wrapper {
   background-color: rgba(71, 71, 72, 0.2);
   border-top-right-radius: 50%;
@@ -451,6 +111,10 @@ figure {
   color: #00bcd4;
 }
 
+body {
+  color: #5f727f;
+}
+
 .pricing-column {
   float: none;
   display: inline-block;
@@ -474,10 +138,10 @@ figure {
 }
 
 .margin-body {
-  position: flex;
-  width: 100%;
+  position: relative;
+  width: 90%;
   box-sizing: border-box;
-  justify-content: center;
+  margin: auto;
 }
 
 .pricing-row {
