Home, navigation components are adjusted to be responsive

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,20 @@
 .bottom-container {
-    color: #66bfbf;
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 1rem 0;
-    display: block;
-    text-align: center;
-    align-items: center;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #66bfbf;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 0.8rem 0;
+  margin-top: 0.8rem;
+  display: block;
+  text-align: center;
+  align-items: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+@media only screen and (max-width: 600px) {
+  .bottom-container {
+    padding: 0;
+    font-size: 0.8rem;
   }
+  a {
+    font-size: 0.8rem;
+  }
+}
