--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="top-container">
   <h1 class="myname">I am Turgut Ozal Guvenc</h1>
   <p class="occupation">
-    Frontend Developer, machine learning engineer and Data Scientist
+    Data Scientist, Machine Learning Engineer and Frontend Developer
   </p>
   <object
     class="mountain"
@@ -22,37 +22,36 @@
       deep learning codes. I have been ranked 2352. rank among more than 305 000
       machine learning practitioners at kaggle.com which is the most prominent
       machine learning platform in the world. My programming knowledge covers
-      both Frontend Development with Angular Framework via HTML, CSS,
-      Javascript, and TypeScript, and backend development via Python, and it is
-      also equipped with data science, statistics, machine learning, and AI
-      knowledge. I learn very fast and efficiently anything I want to learn and
-      I am also a very hardworking person who can work independently and also
-      can collaborate very well with other people. I am proficient in frontend
-      software development languages and technologies such as Typescript,
-      JavaScript, CSS, SASS, and HTML with efficient practical experience using
-      Angular Framework. I have practical experience and knowledge in backend
-      development in Python. I am also fluent in supportive technologies for
-      software development such as Docker, GIT, Github, JIRA, SQL, and NoSQL
-      databases like MongoDB.
+      both Frontend Development with React, HTML, CSS, Javascript, and backend
+      development via Python, and it is also equipped with data science,
+      statistics, machine learning, and AI knowledge. I learn very fast and
+      efficiently anything I want to learn and I am also a very hardworking
+      person who can work independently and also can collaborate very well with
+      other people. I am proficient in frontend software development languages
+      and technologies such as JavaScript, CSS, SASS, and HTML with efficient
+      practical experience using React Framework. I have practical experience
+      and knowledge in backend development in Python. I am also fluent in
+      supportive technologies for software development such as Docker, GIT,
+      Github, JIRA, SQL, and NoSQL databases like MongoDB.
     </p>
   </div>
 </div>
 
 <div class="contact-me">
   <h2>Get In Touch</h2>
-  <h3 style="color: #fff">
+  <h3 class="contact-me-text">
     I'm currently available for full-time, part-time and freelance work, or
     internship.
   </h3>
   <p class="contact-message">
     If you want to employ somebody who is very hard-working and enthusiast, and
     have a very extensive knowledge in different technologies ranging from Web
-    Development to Machine Learning algorithms and AI, then get in touch.
+    Development to Machine Learning algorithms and AI, then get in touch please.
   </p>
   <a
     class="btn contactbutton"
     href="mailto:turgutguvenc60@gmail.com"
-    style="color: #fff; margin-bottom: 2%; width: 30%; text-size: 1.4rem"
+    style="color: #fff; margin-bottom: 2%; width: 30%; text-size: 1rem"
     >CONTACT ME</a
   >
 </div>
