--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -1,27 +1,27 @@
 .container {
   align-items: center;
   text-align: center;
-  min-width: 100%;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 .navbar {
   display: flex;
-  font-size: 1.5rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
+  width: 100%;
   justify-content: space-between;
 }
-.nav-item {
-  margin-left: 7rem;
-}
-.nav-link {
-  font-size: 1.5rem;
-}
 
-#navlist {
-  flex-direction: column;
-  display: none;
+.nav-link {
+  font-size: 1.2rem;
+}
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 #toggle-nav {
@@ -41,4 +41,9 @@ a {
 }
 a:hover {
   color: #eaf6f6;
+}
+@media only screen and (max-width: 600px) {
+  .nav-link {
+    font-size: 0.9rem;
+  }
 }
