--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,14 +5,14 @@
   </p>
   <object
     class="mountain"
-    data="assets/land.svg"
+    data="../../assets/land.svg"
     width="300"
     height="300"
   ></object>
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img src="assets/turgut-modified.png" alt="" />
+    <img src="../../assets/turgut_circled.png" alt="" />
     <h2 style="padding-top: 20px; padding-bottom: 20px">About</h2>
     <p class="text-about">
       I am a Frontend Developer and a data scientist in Boston in USA. I like to
@@ -28,7 +28,7 @@
       efficiently anything I want to learn and I am also a very hardworking
       person who can work independently and also can collaborate very well with
       other people. I am proficient in frontend software development languages
-      and technologies such as JavaScript, CSS, SASS, and HTML with efficient
+      and technologies such as JavaScript, CSS, and HTML with efficient
       practical experience using React Framework. I have practical experience
       and knowledge in backend development in Python. I am also fluent in
       supportive technologies for software development such as Docker, GIT,
@@ -43,11 +43,6 @@
     I'm currently available for full-time, part-time and freelance work, or
     internship.
   </h3>
-  <p class="contact-message">
-    If you want to employ somebody who is very hard-working and enthusiast, and
-    have a very extensive knowledge in different technologies ranging from Web
-    Development to Machine Learning algorithms and AI, then get in touch please.
-  </p>
   <a
     class="btn contactbutton"
     href="mailto:turgutguvenc60@gmail.com"
