--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" routerLink="/"
-      ><img src="assets/turgut-modified.png" width="50px" height="50px"
+      ><img src="../../assets/turgut_circled.png" width="50px" height="50px"
     /></a>
     <button
       class="navbar-toggler"
@@ -23,7 +23,7 @@
           <a class="nav-link" routerLink="/projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/courses">Courses/Certificates</a>
+          <a class="nav-link" routerLink="/courses">Courses-Certificates</a>
         </li>
 
         <li class="nav-item">
