--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,6 +1,6 @@
 <iframe
   class="cvframe"
-  src="assets/neslihancv.pdf"
+  src="../../assets/turgutcvlatest_merged.pdf"
   width="100%"
   height="1000px"
 >
