Courses page is ready for all functionalities

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" routerLink="/"
-      ><img src="../../assets/turgut_circled.png" width="50px" height="50px"
-    /></a>
+    <a class="navbar-brand" routerLink="/">Home</a>
     <button
       class="navbar-toggler"
       type="button"
