--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -12,6 +12,9 @@
   width: 100%;
   justify-content: space-between;
 }
+.navbar-brand {
+  margin-right: 10%;
+}
 
 .nav-link {
   font-size: 1.2rem;
@@ -43,7 +46,8 @@ a:hover {
   color: #eaf6f6;
 }
 @media only screen and (max-width: 600px) {
-  .nav-link {
+  .nav-link,
+  .navbar-brand {
     font-size: 0.9rem;
   }
 }
